// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<a
  className="movie-card"
  href="#1"
>
  <div
    className="movie-card__background"
  >
    <img
      alt="movie1"
      className="movie-card__background__image"
      src="/movie-posters/NoPoster.png"
    />
    <div
      className="movie-card__background__gradient "
      style={
        Object {
          "backgroundImage": "linear-gradient(180deg, hsla(200, 100%, 50%, 0) 0%, hsla(200, 100%, 10%, 0.8) 56%, hsla(200, 100%, 0%, 0.9) 100%)",
        }
      }
    />
  </div>
  <div
    className="movie-card__info"
  >
    <h2>
      movie1
    </h2>
    <p>
      Action/Comedy
    </p>
  </div>
</a>
`;

exports[`Loading Movie Card Rendering LoadingMovieCard Correct Rendering 1`] = `
<div
  className="loading-movie-card"
>
  <div
    className="loading-movie-card__dots"
  >
    .
  </div>
  <div
    className="loading-movie-card__gradient"
    style={
      Object {
        "backgroundImage": "linear-gradient(180deg, hsla(200, 100%, 50%, 0) 0%, hsla(200, 100%, 10%, 0.8) 56%, hsla(200, 100%, 0%, 0.9) 100%)",
      }
    }
  />
</div>
`;

exports[`MovieCard render correctly Movie Card default value 1`] = `
<a
  className="movie-card"
  href="#1"
>
  <div
    className="movie-card__background"
  >
    <img
      alt="Movie1"
      className="movie-card__background__image"
      src="/movie-posters/NoPoster.png"
    />
    <div
      className="movie-card__background__gradient "
      style={
        Object {
          "backgroundImage": "linear-gradient(180deg, hsla(200, 100%, 50%, 0) 0%, hsla(200, 100%, 10%, 0.8) 56%, hsla(200, 100%, 0%, 0.9) 100%)",
        }
      }
    />
  </div>
  <div
    className="movie-card__info"
  >
    <h2>
      Movie1
    </h2>
    <p>
      Comedy
    </p>
  </div>
</a>
`;
